--- a/postgres/offsite_backup.rb.erb
+++ b/postgres/offsite_backup.rb.erb
@@ -1,4 +1,5 @@
 #!/usr/bin/env ruby
+# <%= generated_by_babushka %>
 
 require 'fileutils'
 
@@ -12,25 +13,30 @@ class Object
   end
 end
 
+class String
+  def / other
+    empty? ? other.to_s : File.join(self, other.to_s)
+  end
+end
+
 class PSQLBackup
-  TimeFormat = "%Y-%m-%d-%H%M-%Z"
+  RelativeRepoPath = "~/backups/psqldumps.git"
   ReservedDBNames = %w[
     template0
     template1
   ]
 
+  attr_reader :path
+
   def initialize
-    @time = Time.now
-    @timestamp = @time.strftime TimeFormat
-    @backup_name = "sqldumps-#{@timestamp}"
-    @backup_path = File.expand_path "~/backups/sqldumps"
-    @dump_path = File.join @backup_path, @backup_name
+    @path = File.expand_path "~/backups/psqldumps.git"
   end
 
   def run hosts
-    log "\nStarting sqldump run at #{@time} (#{@timestamp})."
-    FileUtils.mkdir_p @dump_path
-    dump_dbs && send_offsite(hosts) && remove_local
+    log "\nStarting sqldump run at #{Time.now}."
+    Dir.chdir path do
+      git_init(hosts) and dump_dbs and git_commit and git_push
+    end
   end
 
 
@@ -42,27 +48,36 @@ class PSQLBackup
     } - ReservedDBNames
   end
 
-  def dump_dbs
-    Dir.chdir @dump_path do
-      database_names.all? {|db_name| dump_db db_name }
-    end
-  end
-
-  def dump_db db_name
-    log_shell db_name, "sudo -u postgres pg_dump #{db_name} > #{db_name}-#{@timestamp}.psql"
-  end
-
-  def send_offsite hosts
-    Dir.chdir @backup_path do
-      hosts.all? do |host|
-        log_shell "sending to #{host}\n",
-          "tar -zcvf - #{@backup_name}/ | ssh #{host} 'mkdir -p ~/sqldumps/#{`hostname -f`.chomp} && cat > ~/sqldumps/#{`hostname -f`.chomp}/#{@backup_name}.tgz'"
+  def git_init hosts
+    if File.exists?(path / '.git')
+      true
+    elsif FileUtils.mkdir_p(path)
+      Dir.chdir path do
+        shell "git init"
+        hosts.all? {|host|
+          shell "git remote add #{host} #{host}:#{RelativeRepoPath}"
+        }
       end
     end
   end
 
-  def remove_local
-    log_shell "Removing local sqldumps", "rm -rf #{@dump_path}"
+  def dump_dbs
+    database_names.all? {|db_name| dump_db db_name }
+  end
+
+  def dump_db db_name
+    log_shell db_name, "sudo -u postgres pg_dump #{db_name} > #{db_name}.psql"
+  end
+
+  def git_commit
+    shell('git add .')
+    log_shell("\nCommitting", 'git commit -a -m "via postgres_offsite_backup"')
+  end
+
+  def git_push
+    shell('git remote').split("\n").all? {|remote|
+      log_shell "Pushing to #{remote}", "git push #{remote} master"
+    }
   end
 
   def shell cmd
