--- a/postgres/offsite_backup.rb.erb
+++ b/postgres/offsite_backup.rb.erb
@@ -40,6 +40,9 @@ class PSQLBackup
     end
   end
 
+  def branch
+    shell('hostname -f').chomp
+  end
 
   private
 
@@ -77,7 +80,7 @@ class PSQLBackup
 
   def git_push
     shell('git remote').split("\n").all? {|remote|
-      log_shell "Pushing to #{remote}", "git push -f #{remote} master"
+      log_shell "Pushing to #{remote}", "git push -f #{remote} #{branch}"
     }
   end
 
