--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -29,7 +29,7 @@ http {
   }
 
   passenger_root <%= var :passenger_root %>;
-  passenger_ruby <%= Babushka::PkgHelper.for_system.prefix %>/bin/ruby;
+  passenger_ruby <%= Babushka::GemHelper.bin_path / 'ruby' %>;
   passenger_max_pool_size 16;
   passenger_pool_idle_time 1800;
 
