--- a/postgres/offsite_backup.rb.erb
+++ b/postgres/offsite_backup.rb.erb
@@ -21,6 +21,7 @@ end
 
 class PSQLBackup
   RelativeRepoPath = "~/backups/psqldumps.git"
+  LogPath = "~/backups/psqldumps.offsite.log"
   ReservedDBNames = %w[
     template0
     template1
@@ -111,6 +112,8 @@ class PSQLBackup
   end
 
 end
+
+STDOUT.reopen(File.expand_path(LogPath), 'a')
 
 PSQLBackup.new.run %w[
   <%= var :offsite_host %>
