--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -13,6 +13,7 @@ http {
   tcp_nopush on;
   tcp_nodelay off;
   keepalive_timeout 30;
+  client_max_body_size 8m;
 
   include mime.types;
   default_type application/octet-stream;
