--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -14,6 +14,7 @@ http {
   tcp_nodelay off;
   keepalive_timeout 30;
   client_max_body_size 8m;
+  server_names_hash_max_size 4096;
 
   include mime.types;
   default_type application/octet-stream;
