--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -22,6 +22,17 @@ http {
   log_format main '$remote_addr - [$time_local] ($http_host) "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
   access_log logs/access.log main;
 
+  gzip on;
+  gzip_min_length 1024;
+  #gzip_http_version 1.0;
+  #gzip_vary on;
+  gzip_comp_level 9;
+  gzip_proxied any;
+  gzip_types text/plain text/html text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  # make sure gzip does not lose large gzipped js or css files
+  # see http://blog.leetsoft.com/2007/7/25/nginx-gzip-ssl
+  gzip_buffers 16 8k;
+
   # Don't edit this to serve content; instead, add a vhost.
   server {
     listen 80;
