--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -24,14 +24,11 @@ http {
 
   gzip on;
   gzip_min_length 1024;
-  #gzip_http_version 1.0;
   #gzip_vary on;
   gzip_comp_level 9;
   gzip_proxied any;
   gzip_types text/plain text/html text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-  # make sure gzip does not lose large gzipped js or css files
-  # see http://blog.leetsoft.com/2007/7/25/nginx-gzip-ssl
-  gzip_buffers 16 8k;
+  gzip_buffers 16 8k; # handle gzipped output up to 128kB
 
   # Don't edit this to serve content; instead, add a vhost.
   server {
