Removed text/html from nginx gzip types, since it's implied and causes a duplication warning.

--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -27,7 +27,7 @@ http {
   #gzip_vary on;
   gzip_comp_level 9;
   gzip_proxied any;
-  gzip_types text/plain text/html text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
   gzip_buffers 16 8k; # handle gzipped output up to 128kB
 
   # Don't edit this to serve content; instead, add a vhost.
