--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -42,7 +42,7 @@ http {
   }
 
   passenger_root <%= passenger_root %>;
-  passenger_ruby <%= Babushka::GemHelper.ruby_path %>;
+  passenger_ruby <%= Babushka::GemHelper.ruby_wrapper_path %>;
   passenger_max_pool_size 16;
   passenger_pool_idle_time 1800;
 
