In passenger vhosts, rewrite any other domains back to the main one.

--- a/nginx/passenger_vhost.conf.erb
+++ b/nginx/passenger_vhost.conf.erb
@@ -6,6 +6,10 @@ server {
   <% end %>
 }
 
+if ($host ~ ^<%= var(:domain).gsub('.', '\.') %>$) {
+  rewrite ^(.*)$ http://<%= var(:domain) %>$1 permanent;
+}
+
 <% if var(:enable_ssl, :default => 'no').starts_with?('y') %>
 server {
   listen 443;
