--- a/nginx/passenger_vhost.common.erb
+++ b/nginx/passenger_vhost.common.erb
@@ -4,7 +4,7 @@ passenger_enabled on;
 passenger_use_global_queue on;
 rails_env <%= var :rails_env, :default => 'production' %>;
 
-if ($host ~ ^<%= var(:domain).gsub('.', '\.') %>$) {
+if ($host !~ ^<%= var(:domain).gsub('.', '\.') %>$) {
   rewrite ^(.*)$ http://<%= var(:domain) %>$1 permanent;
 }
 
