--- a/nginx/proxy_vhost.conf.erb
+++ b/nginx/proxy_vhost.conf.erb
@@ -2,6 +2,10 @@ server {
   listen 80;
   server_name <%= var :domain %> <%= var :extra_domains, :default => '' %> <%= var :www_aliases %>;
 
+  if ($host !~ ^<%= var(:domain).gsub('.', '\.') %>$) {
+    rewrite ^(.*)$ http://<%= var(:domain) %>$1 permanent;
+  }
+
   location / {
     proxy_pass            http://<%= var :host, :default => 'localhost' %>:<%= var :port, :default => '8080' %>/;
     proxy_redirect        off;
