--- a/nginx/static_vhost.conf.erb
+++ b/nginx/static_vhost.conf.erb
@@ -2,5 +2,9 @@ server {
   listen 80;
   server_name <%= var :domain %> <%= var :extra_domains, :default => '' %> <%= var :www_aliases %>;
 
+  if ($host !~ ^<%= var(:domain).gsub('.', '\.') %>$) {
+    rewrite ^(.*)$ http://<%= var(:domain) %>$1 permanent;
+  }
+
   root <%= var(:document_root).p %>;
 }
