--- a/nginx/passenger_vhost.common.erb
+++ b/nginx/passenger_vhost.common.erb
@@ -1,15 +1,22 @@
 server_name <%= var :domain %> <%= var :extra_domains, :default => '' %> <%= var :www_aliases %>;
 root <%= var(:rails_root) / 'public' %>;
-passenger_enabled on;
-passenger_use_global_queue on;
-rails_env <%= var :rails_env, :default => 'production' %>;
 
 if ($host !~ ^<%= var(:domain).gsub('.', '\.') %>$) {
   rewrite ^(.*)$ http://<%= var(:domain) %>$1 permanent;
 }
 
-if (-f $document_root/system/maintenance.html) {
-  rewrite ^(.*)$ /system/maintenance.html break;
+error_page 503 /system/maintenance.html;
+location /system/maintenance.html { } # bypass the 503 rewrite
+
+location / {
+  passenger_enabled on;
+  passenger_use_global_queue on;
+  rails_env <%= var :rails_env, :default => 'production' %>;
+
+  if (-f $document_root/system/maintenance.html) {
+    rewrite ^(.*)$ /system/maintenance.html;
+    return 503;
+  }
 }
 
 location ~* \.(js|css|jpe?g|png|gif|ico|eot|woff|ttf|swf)$ {
