--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -41,7 +41,7 @@ http {
 
   passenger_root <%= passenger_root %>;
   passenger_ruby <%= Babushka::GemHelper.ruby_wrapper_path %>;
-  passenger_max_pool_size 16;
+  passenger_max_pool_size <%= var(:passenger_pool_size) %>;
   passenger_pool_idle_time 1800;
 
   # Pull in all enabled vhosts
