Don't include the common config for a vhost in the non-SSL section when SSL is forced on.

--- a/nginx/passenger_vhost.conf.erb
+++ b/nginx/passenger_vhost.conf.erb
@@ -1,8 +1,10 @@
 server {
   listen 80;
-  include vhosts/<%= var :domain %>.common;
+
   <% if var(:force_ssl, :default => 'no').starts_with?('y') %>
   rewrite ^(.*)$ https://$host$1 redirect;
+  <% else %>
+  include vhosts/<%= var :domain %>.common;
   <% end %>
 }
 
