--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -41,7 +41,7 @@ http {
 
   passenger_root <%= passenger_root %>;
   passenger_ruby <%= Babushka::GemHelper.ruby_wrapper_path %>;
-  passenger_max_pool_size <%= var(:passenger_pool_size) %>;
+  passenger_max_pool_size <%= worker_pool_size %>;
   passenger_pool_idle_time 0;
   rails_app_spawner_idle_time 0;
 
