Renamed unicorn_socket_name to unicorn_socket_name, using <domain>.unicorn.socket instead.

--- a/nginx/unicorn_vhost.common.erb
+++ b/nginx/unicorn_vhost.common.erb
@@ -22,7 +22,7 @@ location /system/maintenance.html { return 503; }
 try_files /system/maintenance.html $uri/index.html $uri.html $uri @app;
 
 location @app {
-  proxy_pass            http://<%= unicorn_socket_name %>;
+  proxy_pass            http://<%= unicorn_socket %>;
   proxy_redirect        off;
 
   proxy_buffer_size     64k;
