--- a/nginx/vhost.conf.erb
+++ b/nginx/vhost.conf.erb
@@ -1,6 +1,6 @@
 <% if var(:vhost_type) == 'unicorn' %>
 <%# It'd be nice if this could be in the unicorn config instead, but it's only valid in the http{ } block. %>
-upstream <%= unicorn_socket %> {
+upstream <%= unicorn_upstream %> {
   # fail_timeout=0 means we always retry an upstream even if it failed to return a good
   # HTTP response (in case the Unicorn master nukes a single worker for timing out).
   server unix:<%= unicorn_socket_path %> fail_timeout=0;
