Build and configure nginx with ipv6 support.

--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -30,7 +30,7 @@ http {
 
   # Don't edit this to serve content; instead, add a vhost.
   server {
-    listen 80;
+    listen [::]:80;
     server_name localhost;
 
     location / {
