Added activerecord database reconnect to the standard unicorn config.

--- a/unicorn/unicorn.rb.erb
+++ b/unicorn/unicorn.rb.erb
@@ -10,7 +10,13 @@ stderr_path "<%= var(:app_root) / 'log/unicorn.stderr.log' %>"
 stdout_path "<%= var(:app_root) / 'log/unicorn.stdout.log' %>"
 
 before_fork do |server, worker|
+  ActiveRecord::Base.connection.disconnect!
+
   `cat #{server.pid}.oldbin`.scan(/^\d+$/).each {|ppid|
     `kill -QUIT #{ppid}`
   }
+end
+
+after_fork do |server, worker|
+  ActiveRecord::Base.establish_connection
 end
