--- a/nginx/unicorn_vhost.common.erb
+++ b/nginx/unicorn_vhost.common.erb
@@ -21,6 +21,9 @@ location /system/maintenance.html { return 503; }
 
 try_files /system/maintenance.html $uri/index.html $uri.html $uri @app;
 
+# POSTs are intended for the app, not cached pages. We use '=' to let @app set the response code.
+error_page 405 = @app;
+
 location @app {
   proxy_pass            http://<%= upstream_name %>;
   proxy_redirect        off;
