--- a/nginx/proxy_vhost.common.erb
+++ b/nginx/proxy_vhost.common.erb
@@ -1,11 +1,11 @@
-server_name <%= var :domain %> <%= var :extra_domains, :default => '' %> <%= var :www_aliases %>;
+server_name <%= domain %> <%= var :extra_domains, :default => '' %> <%= var :www_aliases %>;
 
-if ($host !~ ^<%= var(:domain).gsub('.', '\.') %>$) {
-  rewrite ^(.*)$ http://<%= var(:domain) %>$1 permanent;
+if ($host !~ ^<%= domain.to_s.gsub('.', '\.') %>$) {
+  rewrite ^(.*)$ http://<%= domain %>$1 permanent;
 }
 
 location / {
-  proxy_pass            http://<%= var :host, :default => 'localhost' %>:<%= var :port, :default => '8080' %>/;
+  proxy_pass            http://<%= host %>:<%= port %>/;
   proxy_redirect        off;
 
   proxy_set_header      Host            $host;
