--- a/nginx/static_vhost.common.erb
+++ b/nginx/static_vhost.common.erb
@@ -1,7 +1,7 @@
-server_name <%= var :domain %> <%= var :extra_domains, :default => '' %> <%= var :www_aliases %>;
+server_name <%= domain %> <%= var :extra_domains, :default => '' %> <%= var :www_aliases %>;
 
-if ($host !~ ^<%= var(:domain).gsub('.', '\.') %>$) {
-  rewrite ^(.*)$ http://<%= var(:domain) %>$1 permanent;
+if ($host !~ ^<%= domain.to_s.gsub('.', '\.') %>$) {
+  rewrite ^(.*)$ http://<%= domain %>$1 permanent;
 }
 
-root <%= var(:document_root).p %>;
+root <%= path.p %>;
