--- a/nginx/unicorn_vhost.common.erb
+++ b/nginx/unicorn_vhost.common.erb
@@ -1,8 +1,8 @@
-server_name <%= var :domain %> <%= var :extra_domains, :default => '' %> <%= var :www_aliases %>;
-root <%= var(:app_root) / 'public' %>;
+server_name <%= domain %> <%= var :extra_domains, :default => '' %> <%= var :www_aliases %>;
+root <%= path / 'public' %>;
 
-if ($host !~ ^<%= var(:domain).gsub('.', '\.') %>$) {
-  rewrite ^(.*)$ http://<%= var(:domain) %>$1 permanent;
+if ($host !~ ^<%= domain.to_s.gsub('.', '\.') %>$) {
+  rewrite ^(.*)$ http://<%= domain %>$1 permanent;
 }
 
 location ~* \.(js|css|jpe?g|png|gif|ico|eot|woff|ttf|swf)$ {
