--- a/nginx/vhost.conf.erb
+++ b/nginx/vhost.conf.erb
@@ -1,4 +1,4 @@
-<% if var(:vhost_type) == 'unicorn' %>
+<% if type == 'unicorn' %>
 <%# It'd be nice if this could be in the unicorn config instead, but it's only valid in the http{ } block. %>
 upstream <%= upstream_name %> {
   # fail_timeout=0 means we always retry an upstream even if it failed to return a good
