--- a/nginx/nginx.launchd.erb
+++ b/nginx/nginx.launchd.erb
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!-- <%= generated_by_babushka %> -->
 <plist version="1.0">
-<dict>
-	<key>Debug</key>
-	<false/>
-	<key>Label</key>
-	<string>org.nginx</string>
-	<key>OnDemand</key>
-	<false/>
-	<key>ProgramArguments</key>
-	<array>
-		<string>/opt/local/bin/daemondo</string>
-		<string>--label=nginx</string>
-		<string>--start-cmd</string>
-		<string>/opt/nginx/sbin/nginx</string>
-		<string>;</string>
-		<string>--pid=fileauto</string>
-		<string>--pidfile</string>
-		<string>/opt/nginx/logs/nginx.pid</string>
-	</array>
-	<key>RunAtLoad</key>
-	<false/>
-</dict>
+  <dict>
+    <key>Label</key>
+    <string>org.nginx.nginx</string>
+    <key>RunAtLoad</key>
+    <true/>
+    <key>KeepAlive</key>
+    <true/>
+    <key>UserName</key>
+    <string>root</string>
+    <key>ProgramArguments</key>
+    <array>
+        <string><%= nginx_bin %></string>
+        <string>-g</string>
+        <string>daemon off;</string>
+    </array>
+    <key>WorkingDirectory</key>
+    <string><%= nginx_prefix %></string>
+  </dict>
 </plist>
