--- a/nginx/vhost.conf.erb
+++ b/nginx/vhost.conf.erb
@@ -13,7 +13,7 @@ server {
   <% if var(:force_ssl, :default => 'no').starts_with?('y') %>
   rewrite ^(.*)$ https://$host$1 redirect;
   <% else %>
-  include vhosts/<%= var :domain %>.common;
+  include vhosts/<%= domain %>.common;
   <% end %>
 }
 
@@ -22,10 +22,10 @@ server {
   listen [::]:443;
 
   ssl                  on;
-  ssl_certificate      certs/<%= var :domain %>.crt;
-  ssl_certificate_key  certs/<%= var :domain %>.key;
+  ssl_certificate      certs/<%= domain %>.crt;
+  ssl_certificate_key  certs/<%= domain %>.key;
   ssl_session_timeout  5m;
 
-  include vhosts/<%= var :domain %>.common;
+  include vhosts/<%= domain %>.common;
 }
 <% end %>
