--- a/unicorn/unicorn.rb.erb
+++ b/unicorn/unicorn.rb.erb
@@ -4,7 +4,7 @@ working_directory '.'
 preload_app true
 timeout 60
 
-listen "<%= unicorn_socket_path %>", :backlog => 64
+listen "<%= unicorn_socket %>", :backlog => 64
 pid "<%= path / 'tmp/pids/unicorn.pid' %>"
 stderr_path "<%= path / 'log/unicorn.stderr.log' %>"
 stdout_path "<%= path / 'log/unicorn.stdout.log' %>"
