Add X-Forwarded-Proto header to requests proxied to unicorn.

--- a/nginx/unicorn_vhost.common.erb
+++ b/nginx/unicorn_vhost.common.erb
@@ -32,7 +32,8 @@ location @app {
   proxy_buffers        32 16k;
   client_max_body_size 128m;
 
-  proxy_set_header     Host            $host;
-  proxy_set_header     X-Real-IP       $remote_addr;
-  proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header     Host              $host;
+  proxy_set_header     X-Real-IP         $remote_addr;
+  proxy_set_header     X-Forwarded-For   $proxy_add_x_forwarded_for;
+  proxy_set_header     X-Forwarded-Proto $scheme;
 }
