Use the canonical domain when rewriting http -> https, since the certificate won't match on any others.

--- a/nginx/vhost.conf.erb
+++ b/nginx/vhost.conf.erb
@@ -11,7 +11,7 @@ server {
   listen [::]:80;
 
   <% if var(:force_ssl, :default => 'no').starts_with?('y') %>
-  rewrite ^(.*)$ https://$host$1 redirect;
+  rewrite ^(.*)$ https://<%= domain %>$1 redirect;
   <% else %>
   include vhosts/<%= domain %>.common;
   <% end %>
