Serve static gzipped versions of assets if they're present.

--- a/nginx/unicorn_vhost.common.erb
+++ b/nginx/unicorn_vhost.common.erb
@@ -7,6 +7,7 @@ if ($host !~ ^<%= domain.to_s.gsub('.', '\.') %>$) {
 
 location ~ ^/assets/ {
   expires max;
+  gzip_static on;
   add_header Cache-Control public;
   add_header Last-Modified "";
   add_header ETag "";
