--- a/nginx/vhost.conf.erb
+++ b/nginx/vhost.conf.erb
@@ -8,7 +8,7 @@ upstream <%= upstream_name %> {
 <% end %>
 
 server {
-  listen [::]:80;
+  listen <%= listen_host %>:<%= listen_port %>;
 
   <% if var(:force_ssl, :default => 'no').starts_with?('y') %>
   rewrite ^(.*)$ https://<%= domain %>$1 redirect;
@@ -19,7 +19,7 @@ server {
 
 <% if var(:enable_ssl, :default => 'no').starts_with?('y') %>
 server {
-  listen [::]:443;
+  listen <%= listen_host %>:443;
 
   ssl                  on;
   ssl_certificate      certs/<%= domain %>.crt;
