--- a/nginx/vhost.conf.erb
+++ b/nginx/vhost.conf.erb
@@ -11,14 +11,14 @@ server {
   listen <%= listen_host %>:<%= listen_port %>;
   charset utf-8;
 
-  <% if var(:force_ssl, :default => 'no').starts_with?('y') %>
+  <% if force_ssl[/^y/] %>
   rewrite ^(.*)$ https://<%= domain %>$1 redirect;
   <% else %>
   include vhosts/<%= domain %>.common;
   <% end %>
 }
 
-<% if var(:enable_ssl, :default => 'no').starts_with?('y') %>
+<% if enable_ssl[/^y/] %>
 server {
   listen <%= listen_host %>:443;
   charset utf-8;
