--- a/nginx/vhost.conf.erb
+++ b/nginx/vhost.conf.erb
@@ -1,8 +1,8 @@
 <% if type == 'unicorn' %>
 <%# It'd be nice if this could be in the unicorn config instead, but it's only valid in the http{ } block. %>
 upstream <%= upstream_name %> {
-  # fail_timeout=0 means we always retry an upstream even if it failed to return a good
-  # HTTP response (in case the Unicorn master nukes a single worker for timing out).
+  # fail_timeout=0 means we always retry the unicorn master, since it's
+  # responsible for restarting workers when they fail.
   server unix:<%= unicorn_socket %> fail_timeout=0;
 }
 <% end %>
