Add the 'postgres' DB to the ignore list.

--- a/postgres/psql_git.rb.erb
+++ b/postgres/psql_git.rb.erb
@@ -15,6 +15,7 @@ class PsqlGit
   REPO_PATH = File.join(PREFIX, "psql.git")
   LOG_PATH = File.join(PREFIX, "psql_git.log")
   RESERVED_DBS = %w[
+    postgres
     template0
     template1
   ]
