--- a/nginx/vhost.conf.erb
+++ b/nginx/vhost.conf.erb
@@ -22,13 +22,15 @@ server {
 
 <% if enable_https[/^y/] %>
 server {
-  listen <%= listen_host %>:443;
+  listen <%= listen_host %>:443 ssl;
   charset utf-8;
 
-  ssl                  on;
-  ssl_certificate      certs/<%= domain %>.crt;
-  ssl_certificate_key  certs/<%= domain %>.key;
-  ssl_session_timeout  5m;
+  ssl_certificate certs/<%= domain %>.crt;
+  ssl_certificate_key certs/<%= domain %>.key;
+  ssl_session_cache shared:ssl:8m;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-SHA:HIGH:!aNULL:!MD5:!kEDH;
+  ssl_prefer_server_ciphers on;
 
   include vhosts/<%= domain %>.common;
 }
